js/src/tests/test262/built-ins/Error/prototype/constructor/S15.11.4.1_A1_T2.js
var
constr
=
Error
.
prototype
.
constructor
;
var
err
=
new
constr
;
assert
.
notSameValue
(
err
undefined
'
The
value
of
err
is
expected
to
not
equal
undefined
'
)
;
assert
.
sameValue
(
err
.
constructor
Error
'
The
value
of
err
.
constructor
is
expected
to
equal
the
value
of
Error
'
)
;
assert
(
Error
.
prototype
.
isPrototypeOf
(
err
)
'
Error
.
prototype
.
isPrototypeOf
(
err
)
must
return
true
'
)
;
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
assert
.
sameValue
(
err
.
toString
(
)
'
[
object
Error
]
'
'
err
.
toString
(
)
must
return
"
[
object
Error
]
"
'
)
;
assert
.
sameValue
(
err
.
valueOf
(
)
.
toString
(
)
'
[
object
Error
]
'
'
err
.
valueOf
(
)
.
toString
(
)
must
return
"
[
object
Error
]
"
'
)
;
reportCompare
(
0
0
)
;
